# ingeneer_advanced

./: CMakeLists.txt
scenes/: monkey-on-plane.json  sphere-galaxy-on-plane.json  two-spheres-behind-on-plane.json  two-triangles-on-plane.json  without-light-and-object.json  without-light-scene.json
src/rayimage/: Image.cpp  Image.hpp
src/raymath/: AABB.cpp  AABB.hpp  Vector3.cpp  Vector3.hpp
src/rayscene/: BSPNode.cpp  BSPNode.hpp  BSPTree.cpp  BSPTree.hpp  CMakeLists.txt  Camera.cpp  Mesh.cpp  Mesh.hpp  Plane.cpp  Plane.hpp  Scene.cpp  Scene.hpp  SceneObject.cpp  SceneObject.hpp  Sphere.cpp  Sphere.hpp  Triangle.cpp  Triangle.hpp  tree.dot
test/: CMakeLists.txt
test/main/: CMakeLists.txt  MainTest.cpp
test/raymath/: CMakeLists.txt  RaymathTestVector.cpp
